--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/kevinJCMotived/Rick-and-Morty-API#readme",
   "devDependencies": {
+    "cssnano": "^4.1.10",
     "sass": "^1.32.8"
   }
 }
