--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/kevinJCMotived/Rick-and-Morty-API#readme",
   "devDependencies": {
-    "@babel/core": "^7.13.13",
+    "@babel/core": "^7.0.0-0",
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "@babel/preset-env": "^7.13.12",
     "cssnano": "^4.1.10",
     "sass": "^1.32.8"
   }
